overflow issue in explorer fixed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,6 +43,7 @@ html, body {
 .explorer {
     height: calc(100vh - 90px);
     width: 100%;
+    overflow-y: auto;
 }
 
 .breadcrumb-bar {
